# ideology-battle

./: .gitignore  DEV_SPEC.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ideology_battle/: __init__.py
src/ideology_battle/cli/: main.py
src/ideology_battle/core/: buff.py  constants.py  faction.py  skill.py  unit.py
src/ideology_battle/data/: __init__.py  units.json
src/ideology_battle/engine/: ai_controller.py  battle_engine.py
src/ideology_battle/utils/: replay.py
tests/: conftest.py
tests/integration/: test_battle_e2e.py
tests/unit/: test_ai_controller.py  test_battle_engine.py  test_skill.py  test_unit.py
